# obscura

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: main.rs
src/dao/: app_state.rs  config.rs  config_map.rs  mod.rs  partitions.rs  verify_token.rs
src/dao/token/: mod.rs  path.rs  paths.rs
src/dto/: mod.rs  token_write.rs
src/http/: config_read.rs  config_write.rs  mod.rs  serve_embedded.rs
src/http/config/: mod.rs  read.rs  write.rs
src/http/config_map/: mod.rs  read.rs  read_prefix.rs  remove.rs  write.rs
src/http/token/: http_response.rs  mod.rs  read.rs  root_exists.rs  root_generate.rs  write.rs
src/repositories/: load_partition.rs  mod.rs
src/services/: load_partitions.rs  mod.rs  path_sanitize.rs  verify_token.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  layout.tsx  main.tsx
ui/src/components/: config-maps-delete.tsx  config-maps-edit.tsx  config-maps.tsx  debounce.tsx  footer.tsx  login.tsx  navbar.tsx  root-generate-token.tsx  root-view-token.tsx  something-went-wrong.tsx
ui/src/utils/: auth-store.ts  config.ts  obscura-store.ts
